# archodex-backend

./: .actrc  .dockerignore  .gitignore  .prettierignore  CLAUDE.md  Cargo.toml  DATAMODEL.md  Dockerfile  LICENSE.md  build.rs
.cargo/: config.toml
.claude/: settings.local.json
.devcontainer/: devcontainer.json  init.sh  start.sh
.github/workflows/: build-dev.yml  cargo-clippy-and-format-checks.yml  trigger-archodex-com-deploy.yml
.specify/: project-notes.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
archodex-com/: Cargo.toml  README.md  build.rs
archodex-com/src/: lib.rs
archodex-error/: Cargo.toml
archodex-error/src/: lib.rs
lambda/: Cargo.toml
lambda/src/: main.rs
migrator/: Cargo.toml
migrator/src/: accounts.surql  lib.rs  main.rs  resources.surql
server/: Cargo.toml
server/src/: main.rs
specs/001-rate-limits-we/: REVIEW-CHECKLIST.md  data-model.md  plan.md  quickstart.md  research.md  self-hosted-auth-design.md  self-hosted-auth-diagrams.md  self-hosted-auth-quickref.md  self-hosted-auth-recommendation.md  self-hosted-auth-summary.md  spec.md  testing-framework-proposal.md  v3-migration-assessment.md
specs/001-rate-limits-we/checklists/: requirements.md
specs/001-rate-limits-we/contracts/: plan-fetch.yaml
specs/002-specs-001-rate/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-specs-001-rate/checklists/: requirements.md
specs/002-specs-001-rate/contracts/: README.md
specs/003-db-dependency-injection/: data-model.md  plan.md  quickstart.md  research-old.md  research.md  spec.md  tasks.md
specs/003-db-dependency-injection/checklists/: requirements.md
specs/003-db-dependency-injection/contracts/: README.md
src/: account.rs  accounts.rs  auth.rs  db.rs  env.rs  event.rs  global_container.rs  lib.rs  principal_chain.rs  query.rs  query_secrets.surql  report.rs  report_api_key.proto  report_api_key.rs  report_api_keys.rs  resource.rs  router.rs  state.rs  surrealdb_deserializers.rs  user.rs  value.rs
src/auth/: mod.rs  provider.rs
tests/: README.md  health_check_integration_test.rs  report_with_auth_test.rs
tests/common/: auth.rs  db.rs  fixtures.rs  mod.rs  providers.rs  test_router.rs
