[package]
name = "lambda"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
archodex-backend = { path = ".." }
async-channel = "2.3.1"
futures-lite = { version = "2.3.0", default-features = false, features = ["std"] }
lambda_http = { version = "0.11.1", default-features = false, features = ["apigw_rest", "tracing"] }
tokio.workspace = true
tracing-subscriber.workspace = true

[features]
archodex-com = ["archodex-backend/archodex-com"]
