[package]
name = "lambda"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
archodex-backend = { path = "..", default-features = false }
async-channel = "2.5.0"
futures-lite = { version = "2.6.1", default-features = false, features = ["std"] }
lambda_http = { version = "0.11.4", default-features = false, features = ["apigw_rest", "tracing"] }
tokio.workspace = true
tracing-subscriber.workspace = true

[features]
archodex-com = ["archodex-backend/archodex-com"]
