[package]
name = "server"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
archodex-backend = { path = ".." }
axum.workspace = true
migrator.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[features]
archodex-com = ["archodex-backend/archodex-com", "migrator/archodex-com"]
